--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+#custom folders
+.winvenv
+DATASETS/female/*
+DATASETS/male/*
+crop_data/female/*
+crop_data/male/*
+test.py
